Adding more goals

--- a/artsexp.html
+++ b/artsexp.html
@@ -56,47 +56,166 @@
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width">
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
-                    <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Blog template</h2>
-                    </div>
-                    <div class="mdl-card__media">
-                        <img class="article-image" src=" images/portfolio-example-01.jpg" border="0" alt="">
-                    </div>
-                    <div class="mdl-card__supporting-text">
-                        <strong>Includes</strong>
-                        <span>Design, UX and Frontend Development</span>
-                    </div>
                     <div class="mdl-grid portfolio-copy">
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3>
+                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Arts, Experience and Miscellaneous</h3>
                         <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
                             <p>
-                                Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
+                                Develop activities related to visual and auditory works. Also experience new things by expressing my imaginative or random stuff. This resolution is a mix of some themes but in the end can be resumed as: Arts, Experience and Miscellaneous.
                             </p>
-                        </div>
-                        <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-02.jpg" border="0" alt="">
-                        </div>
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Initial Ideas</h3>
-                        <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-03.jpg" border="0" alt="">
-                        </div>
-                        <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding ">
                             <p>
-                                Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
+                                Probably one of the most fun parts of this year challenge's (but not easy) will help me to experience and live new things.
                             </p>
                         </div>
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Final Concept</h3>
                         <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-05.jpg" border="0" alt="">
+                            <img class="article-image" src=" images/arts.jpg" border="0" alt="">
                         </div>
-                        <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-06.jpg" border="0" alt="">
-                        </div>
-                        <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
-                            <p>
-                                Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
-                            </p>
-                        </div>
+
+                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Goals</h3>
+                        <ul class="list-control mdl-list">
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">photo_camera</i>
+                                Learn the basics of photography
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">music_note</i>
+                                Learn how to play a musical instrument
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">queue_music</i>
+                                Go to a classic Jazz bar ("The Maze Rio" or "Arcos")
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">local_drink</i>
+                                Go to an Irish Pub
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">favorite</i>
+                                Blood donation
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">place</i>
+                                Rock Climbing
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">local_drink</i>
+                                Go to a beer tasting event
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">block</i>
+                                Be vegan for 1 month
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">favorite</i>
+                                Getting to know a random person's life story
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">favorite</i>
+                                Standing up for a social cause that I believe in
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">extension</i>
+                                Learn how to Cook
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">attach_money</i>
+                                Save R$ 15.000,00
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+                        </ul>
                     </div>
                 </div>
             </div>
