--- a/education.html
+++ b/education.html
@@ -56,47 +56,118 @@
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width">
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
-                    <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Blog template</h2>
-                    </div>
-                    <div class="mdl-card__media">
-                        <img class="article-image" src=" images/portfolio-example-01.jpg" border="0" alt="">
-                    </div>
-                    <div class="mdl-card__supporting-text">
-                        <strong>Includes</strong>
-                        <span>Design, UX and Frontend Development</span>
-                    </div>
                     <div class="mdl-grid portfolio-copy">
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3>
+                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Education</h3>
                         <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
                             <p>
-                                Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
+                                Goals related to professional and academic knowledge. The goal of this resolution is to delineate a path for what to learn this year and improve myself.
                             </p>
-                        </div>
-                        <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-02.jpg" border="0" alt="">
-                        </div>
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Initial Ideas</h3>
-                        <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-03.jpg" border="0" alt="">
-                        </div>
-                        <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding ">
                             <p>
-                                Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
+                                As an undergraduate student is also important to focus on complete my degree and to plan the next steps.
                             </p>
                         </div>
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Final Concept</h3>
                         <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-05.jpg" border="0" alt="">
+                            <img class="article-image" src=" images/education.png" border="0" alt="">
                         </div>
-                        <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-06.jpg" border="0" alt="">
-                        </div>
-                        <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
-                            <p>
-                                Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
-                            </p>
-                        </div>
+
+                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Goals</h3>
+                        <ul class="list-control mdl-list">
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">account_balance</i>
+                                Finish my undergraduate degree
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">book</i>
+                                Publish 1 paper
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">code</i>
+                                Study and Use Docker
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">code</i>
+                                Learn Scala
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">translate</i>
+                                Learn a new language (French or Japanese)
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">work</i>
+                                Interview at one of the top 10 tech companies/startups
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">work</i>
+                                Apply for international master degrees opportunities
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+
+                          <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">
+                                <i class="material-icons mdl-list__item-icon">book</i>
+                                Complete 5 MOOCs
+                            </span>
+                            <span class="mdl-list__item-secondary-action">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                                <input type="checkbox" class="mdl-checkbox__input" disabled="disabled"/>
+                              </label>
+                            </span>
+                          </li>
+                        </ul>
                     </div>
                 </div>
             </div>
