--- a/about.html
+++ b/about.html
@@ -86,12 +86,11 @@
             </div>
             <footer class="mdl-mini-footer">
                 <div class="mdl-mini-footer__left-section">
-                    <div class="mdl-logo">Simple portfolio website</div>
+                    <div class="mdl-logo">Hguimaraes - New Year's Resolution (2018)</div>
                 </div>
                 <div class="mdl-mini-footer__right-section">
                     <ul class="mdl-mini-footer__link-list">
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Privacy & Terms</a></li>
+                        <li><a href="http://hguimaraes.me/">Blog</a></li>
                     </ul>
                 </div>
             </footer>
