--- a/datascience.html
+++ b/datascience.html
@@ -297,7 +297,7 @@
                               </li>
                               <li class="mdl-list__item">
                                 <span class="mdl-list__item-primary-content">
-                                    Develop a Computer Vision Project using RNNs on Github
+                                    Develop a Project using RNNs on Github
                                 </span>
                                 <span class="mdl-list__item-secondary-action">
                                   <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
@@ -307,7 +307,7 @@
                               </li>
                               <li class="mdl-list__item">
                                 <span class="mdl-list__item-primary-content">
-                                    Develop a Computer Vision Project using RL on Github
+                                    Develop a Project using RL on Github
                                 </span>
                                 <span class="mdl-list__item-secondary-action">
                                   <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
