--- a/index.html
+++ b/index.html
@@ -1,139 +1,111 @@
-<!doctype html>
-<!--
-  Material Design Lite
-  Copyright 2015 Google Inc. All rights reserved.
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-      https://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License
--->
-<html lang="en">
-
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A portfolio template that uses Material Design Lite.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Hguimaraes - New Year's Resolution</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-pink.min.css" />
-    <link rel="stylesheet" href="styles.css" />
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="assets/favicon.ico">
+	<title>/nyr_2020</title>
 
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<!-- CSS for the template -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
+    <link href="./css/console.css" rel="stylesheet">
 </head>
-
 <body>
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-            <div class="mdl-layout__header-row portfolio-logo-row">
-                <span class="mdl-layout__title">
-                    <div class="portfolio-logo"></div>
-                    <span class="mdl-layout__title">New Year's Resolution (2018)</span>
-                </span>
-            </div>
-            <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
-                <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-                    <a class="mdl-navigation__link is-active" href="index.html">NYR</a>
-                    <a class="mdl-navigation__link" href="about.html">About</a>
-                </nav>
-            </div>
-        </header>
-        <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-            <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-                <a class="mdl-navigation__link is-active" href="index.html">NYR</a>
-                <a class="mdl-navigation__link" href="about.html">About</a>
-            </nav>
-        </div>
-        <main class="mdl-layout__content">
-            <div class="mdl-grid portfolio-max-width">
-                <!-- Data Science Main card --> 
-                <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-                    <div class="mdl-card__media mdl-cell mdl-cell--12-col-tablet">
-                        <img class="article-image" src=" images/datascience.png" border="0" alt="">
-                    </div>
-                    <div class="mdl-cell mdl-cell--8-col">
-                        <h2 class="mdl-card__title-text">Data Science Journey</h2>
-                        <div class="mdl-card__supporting-text padding-top">
-                            <span>Starting at Jan, 2018</span>
-                        </div>
-                        <div class="mdl-card__supporting-text no-left-padding">
-                            <p>The goal of this resolution is to build a solid foundation on the disciplines related to Data Science, focusing on Machine Learning and Deep Learning. Become more activate on Kaggle Competitions and build a strong Portfolio are also targets for this year. Click in read more for full description.</p>
-                        </div>
-                        <div class="mdl-card__actions mdl-card--border">
-                            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="datascience.html">Read more</a>
-                        </div>
-                    </div>
-                </div>
+	<div class="container">
+		<p/><p/>
+		<div class="ascii-art d-none d-lg-block">
 
-                <!-- Books Card -->
-                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-                    <div class="mdl-card__media">
-                        <img class="article-image" src=" images/books.jpg" border="0" alt="">
-                    </div>
-                    <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Books</h2>
-                    </div>
-                    <div class="mdl-card__supporting-text">
-                        List of books to read this year covering a large variety of genres <br><br><br><br>
-                    </div>
-                    <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="books.html">Read more</a>
-                    </div>
-                </div>
+ __  __                          __    __                      __            ____                           ___             __                                  
+/\ \/\ \                        /\ \  /\ \                    /\ \          /\  _`\                        /\_ \           /\ \__  __                           
+\ \ `\\ \     __   __  __  __   \ `\`\\/'/  __     __     _ __\ \/   ____   \ \ \L\ \     __    ____    ___\//\ \    __  __\ \ ,_\/\_\    ___     ___     ____  
+ \ \ , ` \  /'__`\/\ \/\ \/\ \   `\ `\ /' /'__`\ /'__`\  /\`'__\/   /',__\   \ \ ,  /   /'__`\ /',__\  / __`\\ \ \  /\ \/\ \\ \ \/\/\ \  / __`\ /' _ `\  /',__\ 
+  \ \ \`\ \/\  __/\ \ \_/ \_/ \    `\ \ \/\  __//\ \L\.\_\ \ \/    /\__, `\   \ \ \\ \ /\  __//\__, `\/\ \L\ \\_\ \_\ \ \_\ \\ \ \_\ \ \/\ \L\ \/\ \/\ \/\__, `\
+   \ \_\ \_\ \____\\ \___x___/'      \ \_\ \____\ \__/.\_\\ \_\    \/\____/    \ \_\ \_\ \____\/\____/\ \____//\____\\ \____/ \ \__\\ \_\ \____/\ \_\ \_\/\____/
+    \/_/\/_/\/____/ \/__//__/         \/_/\/____/\/__/\/_/ \/_/     \/___/      \/_/\/ /\/____/\/___/  \/___/ \/____/ \/___/   \/__/ \/_/\/___/  \/_/\/_/\/___/ 
+                                                                                                                                                                
+		</div>
+		<p/><p/>
+		<div class="row">
+			<span class="author">Hguimaraes</span> <span class="linux-path">nyr_2020/build</span> <span class="git-branch">master</span> <span class="exec">$ make && run_nyr.out</span>
+		</div>
+		<div>
+			<span class="exec">[ 43%]</span><span> Building CXX Object</span><br/>
+			<span class="exec">[ 75%]</span><span> Linking CXX shared module</span><br/>
+			<span class="exec">[100%]</span><span> Built target run_nyr</span><br/>
+		</div>
+		<p/><p/>
+		<span class="exec d-none d-lg-block">DEBUG:nyr_2020: resolution categories of 2020</span>
+		<div class="ascii-table d-none d-lg-block">
+			+--------------+----------+-------+----------+
+			| <span class="text-prof">Professional</span> | <span class="text-acad">Academic</span> | <span class="text-books">Books</span> | <span class="text-person">Personal</span> |
+			+--------------+----------+-------+----------+
+		</div>
+		<p/><p/>
 
-                <!-- Education Card -->
-                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-                    <div class="mdl-card__media">
-                        <img class="article-image" src=" images/education.png" border="0" alt="">
-                    </div>
-                    <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Education</h2>
-                    </div>
-                    <div class="mdl-card__supporting-text">
-                        Goals related to professional and academic knowledge. <br><br><br><br>
-                    </div>
-                    <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="education.html">Read more</a>
-                    </div>
-                </div>
+		<!-- Professional goals for 2020 -->
+		<div class="prof-goals">
+			<span class="text-prof">-- Looking for professional goals - found</span>
+			<ul class="goals-list">
+				<li class="update-mark">[-] Career Path - Advanced NLP</li>
+				<li class="update-mark">[-] Fundamentals of RL and IRL</li>
+				<li class="update-mark">[-] Expert Tier (Competitions) on Kaggle</li>
+				<li class="update-mark">[-] Learn the basics of DevOps / MLOps</li>
+				<li class="update-mark">[-] Contribute to an Open Source project</li>
+				<li class="update-mark">[-] Give a Tech Talk</li>
+				<li class="update-mark">[-] Write 5 Blog posts</li>
+				<li class="update-mark">[-] Programming Languages: Python, C++ and Go</li>
+			</ul>
+		</div>
 
-                <!-- Arts, Experience and Miscellaneous Card -->
-                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-                    <div class="mdl-card__media">
-                        <img class="article-image" src=" images/arts.jpg" border="0" alt="">
-                    </div>
-                    <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Arts and Experiences</h2>
-                    </div>
-                    <div class="mdl-card__supporting-text">
-                        Develop activities related to visual and auditory works. Also experience new things by expressing my imaginative or random stuff. <br><br>
-                    </div>
-                    <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="artsexp.html">Read more</a>
-                    </div>
-                </div>
-            </div>
-            <footer class="mdl-mini-footer">
-                <div class="mdl-mini-footer__left-section">
-                    <div class="mdl-logo">Hguimaraes - New Year's Resolution (2018)</div>
-                </div>
-                <div class="mdl-mini-footer__right-section">
-                    <ul class="mdl-mini-footer__link-list">
-                        <li><a href="http://hguimaraes.me/">Blog</a></li>
-                    </ul>
-                </div>
-            </footer>
-        </main>
-    </div>
-    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+		<!-- Academic goals for 2020 -->
+		<div class="acad-goals">
+			<span class="text-acad">-- Looking for academic goals - found</span>
+			<ul class="goals-list">
+				<li class="update-mark">[-] Publish 3 papers</li>
+				<li class="update-mark">[-] Finish all my academic requirements at USP</li>
+				<li class="update-mark">[-] Become a M.Sc. candidate (a.k.a pass qualifying exams)</li>
+				<li class="update-mark">[-] Complete 5 MOOCs</li>
+			</ul>
+		</div>
+
+		<!-- Reading goals for 2020 -->
+		<div class="books-goals">
+			<span class="text-books">-- Looking for Reading goals - found</span>
+			<ul class="goals-list">
+				<li class="update-mark">[-] 21 Lessons for the 21st Century - Yuval Harari</li>
+				<li class="update-mark">[-] Mindf*ck - Christopher Wylie</li>
+				<li class="update-mark">[-] The Age of Surveillance Capitalism - Shoshana Zuboff</li>
+				<li class="update-mark">[-] Notes from Underground - Fyodor Dostoevsky</li>
+				<li class="update-mark">[-] Growth - Vaclav Smil</li>
+				<li class="update-mark">[-] Prepared - Diane Tavenner</li>
+				<li class="update-mark">[-] The Dharma Bums - Jack Kerouac</li>
+				<li class="update-mark">[-] How to Win Friends and Influence People - Dale Carnegie</li>
+				<li class="update-mark">[-] Rich Dad, Poor Dad - Robert Kiyosaki</li>
+				<li class="update-mark">[-] The Lean Startup - Eric Ries</li>
+			</ul>
+		</div>
+
+		<!-- Personal goals for 2020 -->
+		<div class="person-goals">
+			<span class="text-person">-- Looking for personal goals - found</span>
+			<ul class="goals-list">
+				<li class="update-mark">[-] Donate blood 3 times</li>
+				<li class="update-mark">[-] Get A2 level in French</li>
+				<li class="update-mark">[-] Save 25% of my salary</li>
+				<li class="update-mark">[-] Get 10% BF and 75 Kg</li>
+				<li class="update-mark">[-] Yellow Belt at Kung Fu</li>
+				<li class="update-mark">[-] Be veggie for a month</li>
+			</ul>
+		</div>
+	</div>
+	
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
