fixing for a better design

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 		<!-- Professional goals for 2020 -->
 		<div class="prof-goals">
-			<span class="text-prof">-- Looking for professional goals - found</span>
+			<span class="text-prof">DEBUG:get_goals: professional</span>
 			<ul class="goals-list">
 				<li class="update-mark">[-] Career Path - Advanced NLP</li>
 				<li class="update-mark">[-] Fundamentals of RL and IRL</li>
@@ -62,7 +62,7 @@
 
 		<!-- Academic goals for 2020 -->
 		<div class="acad-goals">
-			<span class="text-acad">-- Looking for academic goals - found</span>
+			<span class="text-acad">DEBUG:get_goals: academic</span>
 			<ul class="goals-list">
 				<li class="update-mark">[-] Publish 3 papers</li>
 				<li class="update-mark">[-] Finish all my academic requirements at USP</li>
@@ -73,7 +73,7 @@
 
 		<!-- Reading goals for 2020 -->
 		<div class="books-goals">
-			<span class="text-books">-- Looking for Reading goals - found</span>
+			<span class="text-books">DEBUG:get_goals: Reading</span>
 			<ul class="goals-list">
 				<li class="update-mark">[-] 21 Lessons for the 21st Century - Yuval Harari</li>
 				<li class="update-mark">[-] Mindf*ck - Christopher Wylie</li>
@@ -90,7 +90,7 @@
 
 		<!-- Personal goals for 2020 -->
 		<div class="person-goals">
-			<span class="text-person">-- Looking for personal goals - found</span>
+			<span class="text-person">DEBUG:get_goals: personal</span>
 			<ul class="goals-list">
 				<li class="update-mark">[-] Donate blood 3 times</li>
 				<li class="update-mark">[-] Get A2 level in French</li>
