--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 		<!-- Reading goals for 2020 -->
 		<div class="books-goals">
-			<span class="text-books">DEBUG:get_goals: Reading</span>
+			<span class="text-books">DEBUG:get_goals: reading</span>
 			<ul class="goals-list">
 				<li class="update-mark">[-] 21 Lessons for the 21st Century - Yuval Harari</li>
 				<li class="update-mark">[-] Mindf*ck - Christopher Wylie</li>
