Changing programming languages (replaced 1 by 2)

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<li class="update-mark">[-] Contribute to an Open Source project</li>
 				<li class="update-mark">[-] Give a Tech Talk</li>
 				<li class="update-mark">[-] Write 5 Blog posts</li>
-				<li class="update-mark">[-] Programming Languages: Python, C++ and Go</li>
+				<li class="update-mark">[-] Programming Languages: Python, C++, Haskell and Scala</li>
 			</ul>
 		</div>
 
